Fix reflow from lazy loaded images improvements
See T135430#2384461

The link that wraps all images is an inline element and if the children is not
a block it will change it's size. Before this didn't happen because we had
overflow:hidden which hid the extra space keeping the element unchanged.

This patch makes the placeholder a block, like the inside image that will load
is, making it unnecessary to bring back overflow:hidden

Bug: T135430

--- a/resources/skins.minerva.base.styles/images.less
+++ b/resources/skins.minerva.base.styles/images.less
@@ -12,7 +12,9 @@
 
 	background-color: @placeholderBackgroundColor;
 
-	display: inline-block;
+	// In order to avoid reflows placeholder needs to be block, or
+	// inline-block+overflow:hidden given it is nested inside an inline <a>
+	display: block;
 
 	// When inserted, don't show the image because we want to animate it
 	img {
